<resources>
    <string name="app_name">Practica 1</string>
    <string name="txt_bienvenidos">Bienvenidos</string>
    <string name="hint_nombres">Ingrese sus nombres</string>
    <string name="hint_apellidos">Ingrese sus apellidos</string>
    <string name="boton_confirmar">Confirmar</string>
    <string name="txt_resultado">[Resultado]</string>
    <string name="hint_nacimiento">Ingrese el año</string>
    <string name="btn_verificar">Verificar</string>
    <string name="txt_AnuncioEdad">¿Eres mayor de edad?</string>
    <string name="txt_ingresoEdad">Ingresa tu edad</string>
    <string name="btn_Procesar">Procesar</string>
    <string name="txt_Formulario">Formulario de Registro</string>
    <string name="hint_nombres_form">Ingrese sus nombres</string>
    <string name="hint_edad">Ingrese su edad</string>
    <string name="radio_Masculino">Masculino</string>
    <string name="radio_Femenino">Femenino</string>
    <string name="check_terminos">Aceptar Terminos</string>
    <string name="btn_enviar">Enviar</string>
    <string name="generaciones">GENERACIONES</string>
    <string name="txt_registro_correcto">Registro correcto</string>
    <string name="txt_tus_datos">Tus datos</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="datos_mascota">Datos de tu mascota</string>
    <string name="regresar_inicio">Regresar al inicio</string>
</resources>