<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/txtFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Formulario"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/edtNombresR"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="16dp"
        android:padding="10dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_nombres_form"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <EditText
        android:id="@+id/edtEdadR"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="16dp"
        android:padding="10dp"
        android:drawableStart="@drawable/calendar"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_edad"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintVertical_bias="0.4">

        <RadioButton
            android:id="@+id/rbMasculinoR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_Masculino" />

        <RadioButton
            android:id="@+id/rbFemeninoR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_Femenino" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbTerminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/check_terminos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEnviarR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/btn_enviar"
        android:textAllCaps="false"
        android:backgroundTint="@color/celeste"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbTerminos"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>